@@ -11,6 +11,7 @@ Date: ????
     - Support adopting an upgraded/ghost thruster
     - Fix thruster control behavior finder using the wrong position
     - Prevent control behavior ghosts existing without a thruster
+    - Allow the control behavior to only exist at its exact thruster offset
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 17
